--- a/client/src/components/atoms/CircleButton/index.module.scss
+++ b/client/src/components/atoms/CircleButton/index.module.scss
@@ -1,3 +1,10 @@
+.btn-container {
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .btn {
   height: 100px;
   width: 100px;
