--- a/client/src/assets/styles/globals.scss
+++ b/client/src/assets/styles/globals.scss
@@ -1,4 +1,5 @@
-@use "./variable" as *;
-@use "./reset" as *;
-
+// @use "./variable" as *;
+// @use "./reset" as *;
+@import './reset.scss';
+@import url('./variable.css');
 // 여기에 폰트 설정하면 될듯 !
