--- a/client/src/components/atoms/Input/index.module.scss
+++ b/client/src/components/atoms/Input/index.module.scss
@@ -1,18 +1,16 @@
-@use "../../../assets/styles/variable" as *;
-
 .input {
     padding: 0px 14px;
-    border: 1px solid $border-gray;
+    border: 1px solid var(--border-gray);
     border-radius: 8px;
     font-size: 14px;
     height: 40px;
     &:focus {
       outline: none;
-      border-color:  $vople-orange;
+      border-color: var(--color-main-orange);
     }
   
     &--error {
-      border-color: $color-error;
+      border-color: var(--color-error);
     }
   
     &--search {
@@ -20,20 +18,15 @@
     }
 
     &--warning{
-      border-color: $color-error;
+      border-color: var(--color-error);
     }
 
     &--disabled {
       background-color: #f5f5f5;
-      border-color: #d9d9d9;
-      color: #00000040;
+      border-color: var(--border-gray);
+      color: var(--border-gray);
       cursor: not-allowed;
-      
-      &:hover,
-      &:focus {
-        border-color: #d9d9d9;
-        box-shadow: none;
-      }
+ 
     }
   }
 
