S12P11B102-211 refactoring : userId를 통해서 닉네임 주입 후 랜덤 색상 생성해서 데이터 반환

--- a/server/src/main/resources/templates/index.html
+++ b/server/src/main/resources/templates/index.html
@@ -59,8 +59,8 @@
     if (message && stompClient) {
       stompClient.send('/api/send/' + select.value + '/1', {
       }, JSON.stringify({
-        userId : 1,
-        nickname : 'nickname1',
+        userId : 2,
+        // nickname : 'nickname1',
         text : message
       })); // 메시지 전송
       messageInput.value = ''; // 입력 필드 초기화
