S12P11B102-206 FEAT:Input Molecules 구현(InputField, DateTimeField, TextAreaField)

--- a/client/src/assets/styles/globals.scss
+++ b/client/src/assets/styles/globals.scss
@@ -1,2 +1,16 @@
 @import url('./variable.css');
 @import './reset.scss';
+@import './fonts.scss';
+
+body {
+    font-family: 'Pretendard', sans-serif;
+    color:var(--color-black);
+}
+
+input,
+textarea,
+select,
+button {
+  font: inherit;  
+  color: inherit;
+}
