--- a/client/src/assets/styles/variable.css
+++ b/client/src/assets/styles/variable.css
@@ -9,19 +9,23 @@
     --color-main-yellow: #f2b705;
     --color-main-mint: #04bfad;
   
+
+    /* background */
+    --color-bg-orange: #fff6dc;
+
     /* gray */
     --color-gray-deep: #555555;
     --color-gray-main: #777777;
     --color-gray-light: #999999;
     --color-gray-background: #d9d9d9;
-  
+
     /* error */
     --color-error: #fe3f78;
     
     /* system */
     --border-gray : #ccc;
+    --disabled-gray : #f7f7f7;
+
 
   }
   
-  /* 
-   */
