--- a/client/src/components/atoms/Input/index.module.scss
+++ b/client/src/components/atoms/Input/index.module.scss
@@ -4,6 +4,7 @@
     border-radius: 8px;
     font-size: 14px;
     height: 40px;
+    
     &:focus {
       outline: none;
       border-color: var(--color-main-orange);
@@ -21,8 +22,17 @@
       border-color: var(--color-error);
     }
 
+    &--filled {
+      background-color: var(--color-bg-orange);
+      border-color: rgba(0,0,0,0);
+      &:focus {
+        outline: none;
+        border-color: rgba(0,0,0,0);
+      }
+    }
+
     &--disabled {
-      background-color: #f5f5f5;
+      background-color: var(--disabled-gray);
       border-color: var(--border-gray);
       color: var(--border-gray);
       cursor: not-allowed;
