S12P11B102-206 FEAT : InputField(InputField, DateTimeField, TextAreaField, ChatBar) Molecule Component 구현 및 폰트 설정

--- a/client/src/components/atoms/BaseButton/index.module.scss
+++ b/client/src/components/atoms/BaseButton/index.module.scss
@@ -31,5 +31,20 @@
       background-color: var(--color-gray-background);
       color: var(--color-gray-light);
     }
+
   }
+
+  &-mini-chip {
+    height: 26px;
+    border-radius: 13px;
+    border-color: var(--border-gray);
+    color: var(--color-black);
+    background-color: #fff;
+
+    &.btn-status-fill {
+      background-color: rgba(255,255,255,0.5);
+      color: #fff;
+    }
+  }
+
 }
