--- a/client/src/components/atoms/Poster/index.module.scss
+++ b/client/src/components/atoms/Poster/index.module.scss
@@ -18,3 +18,12 @@
     }
   }
 }
+
+
+.none { 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  white-space: pre-wrap;
+  min-width: 150px;
+}
