S12P11B102-203-feat: 후보자 섹션 & 선택 molecules 구현(스토리북 추가)

--- a/client/src/components/molecules/CandidateSection/index.module.scss
+++ b/client/src/components/molecules/CandidateSection/index.module.scss
@@ -19,14 +19,22 @@
     gap: 12px;
     padding: 0 16px;
   }
+  &-none-intro {
+    height: 100px;
+    text-align: center;
+    align-items: center;
+  }
 
-    &-poster {
-      justify-content: center;
-      align-items: center;
-    }
+  &-poster {
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .information {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   &-perfix {
     margin-right: 5px;
   }
