fix: useQuery 오류 해결
api 연동 시 useQuery 구현 예정정

--- a/client/src/components/atoms/CircleButton/index.module.scss
+++ b/client/src/components/atoms/CircleButton/index.module.scss
@@ -19,11 +19,11 @@
   font-size: 1rem;
 
   &-status {
-    &-able {
+    &-true {
       background-color: var(--color-main-orange);
     }
 
-    &-disable {
+    &-false {
       background-color: var(--color-gray-light);
     }
   }
