--- a/client/src/components/molecules/Menu/index.module.scss
+++ b/client/src/components/molecules/Menu/index.module.scss
@@ -5,7 +5,8 @@
   padding: 10px;
   gap: 20px;
   border-radius: 10px;
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.15);
+  background-color: #fff;
 }
 
 .is-open {
