--- a/client/src/components/atoms/CircleButton/index.module.scss
+++ b/client/src/components/atoms/CircleButton/index.module.scss
@@ -1,13 +1,3 @@
-/* 회전 애니메이션 */
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
 .btn-container {
   width: fit-content;
   display: flex;
@@ -37,5 +27,10 @@
 }
 
 .spin-true {
-  animation: spin 1s linear infinite;
+  display: inline-block;
+  transition: transform 1s linear;
+
+  &.spinning {
+    transform: rotate(360deg);
+  }
 }
