--- a/client/src/components/molecules/ElectionListItem/index.module.scss
+++ b/client/src/components/molecules/ElectionListItem/index.module.scss
@@ -1,4 +1,3 @@
-// ElectionListItem.module.scss
 .container {
   display: flex;
   justify-content: space-between;
@@ -71,6 +70,7 @@
 }
 
 .menuButton {
+  padding: 4px;
   display: flex;
   align-items: start;
   background: none;
@@ -78,7 +78,6 @@
   height: 100%;
   cursor: pointer;
   color: #666;
-
 }
 
 .rotate {
