S12P11B102-225-chore: Tag의 Text Atom -> Button Atom으로 변경

--- a/client/src/components/molecules/CandidateTag/index.module.scss
+++ b/client/src/components/molecules/CandidateTag/index.module.scss
@@ -35,11 +35,14 @@ body {
     justify-content: start;
     gap: 2px;
   }
+
   &-name {
-    border: 1px solid #dfdfdfdf;
-    padding: 6px 12px;
-    border-radius: 17px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3px;
   }
+
   &-mini-check {
     width: 24px;
     height: 24px;
