--- a/client/src/components/atoms/BaseButton/index.module.scss
+++ b/client/src/components/atoms/BaseButton/index.module.scss
@@ -1,4 +1,7 @@
 .btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   border: none;
   color: var(--color-white);
