--- a/client/src/components/atoms/Input/index.module.scss
+++ b/client/src/components/atoms/Input/index.module.scss
@@ -1,4 +1,5 @@
 .input {
+    width: 100%;
     padding: 0px 14px;
     border: 1px solid var(--border-gray);
     border-radius: 8px;
@@ -23,12 +24,25 @@
     }
 
     &--filled--true {
-      background-color: var(--color-bg-orange);
-      border-color: rgba(0,0,0,0);
-      &:focus {
-        outline: none;
+      &--light {
+        background-color: var(--color-bg-orange);
         border-color: rgba(0,0,0,0);
+        &:focus {
+          outline: none;
+          border-color: rgba(0,0,0,0);
+        }
       }
+
+      &--dark {
+        background-color: #555;
+        border: none;
+        color: #ffffff;
+    
+        &::placeholder {
+          color: #eee;
+        }
+      }
+    
     }
 
     &--disabled--true {
@@ -36,7 +50,6 @@
       border-color: var(--border-gray);
       color: var(--border-gray);
       cursor: not-allowed;
- 
     }
   }
 
