feat : vote in Session CRD

--- a/server/src/main/resources/templates/index.html
+++ b/server/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 <h1>Chat Application</h1>
 <input type="text" id="messageInput" placeholder="Type your message here..." />
 <select id="type">
-  <option value="electionSession">Session</option>
+  <option value="session">Session</option>
   <option value="team">Team</option>
 </select>
 <button onclick="connect()">Connect</button>
