--- a/client/src/components/molecules/CandidateSection/index.module.scss
+++ b/client/src/components/molecules/CandidateSection/index.module.scss
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: center;
   background-color: var(--color-white);
+  border-radius: 10px;
 
   &-content {
     width: 100%;
