--- a/client/src/components/molecules/Footer/index.module.scss
+++ b/client/src/components/molecules/Footer/index.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: var(--color-white);
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.15);
 
   img {
