--- a/client/src/components/organisms/MainCandidateList/index.module.scss
+++ b/client/src/components/organisms/MainCandidateList/index.module.scss
@@ -1,11 +1,14 @@
 // MainCandidate.scss
 .vote {
   &-main {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 10px;
     touch-action: pan-y;
+    border-radius: 10px;
   }
 
   &-title {
@@ -13,6 +16,7 @@
     flex-direction: column;
     align-items: center;
     gap: 12px;
+    margin-bottom: 30px;
 
     img {
       height: 42px;
@@ -27,6 +31,7 @@
       overflow: hidden;
       position: relative;
       margin: 0 auto;
+      border-radius: 10px;
     }
 
     &-list {
