S12P11B102-256 feat: 선거 메인 페이지 구현
투표율에 들어가는 voteName은 애니메이션으로 처리

--- a/client/src/components/organisms/MainCandidateList/index.module.scss
+++ b/client/src/components/organisms/MainCandidateList/index.module.scss
@@ -8,7 +8,6 @@
     align-items: center;
     gap: 10px;
     touch-action: pan-y;
-    border-radius: 10px;
   }
 
   &-title {
@@ -32,6 +31,7 @@
       position: relative;
       margin: 0 auto;
       border-radius: 10px;
+      box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
     }
 
     &-list {
