--- a/client/src/components/templates/ElectionMainTemplate/index.module.scss
+++ b/client/src/components/templates/ElectionMainTemplate/index.module.scss
@@ -1,11 +1,18 @@
 .election {
   width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 
   &-container {
+    flex: 1;
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    padding: 20px;
     gap: 50px;
+    overflow-y: auto;
+    padding-bottom: 200px;
   }
 
   .main {
@@ -30,6 +37,70 @@
       display: flex;
       flex-direction: column;
       gap: 50px;
+
+      &-text {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+      }
+    }
+
+    &-turnout {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      gap: 30px;
+
+      &-title {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+      }
+
+      &-chart {
+        position: relative;
+        background-color: var(--color-white);
+        border-radius: 10px;
+        box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+        padding: 10px;
+
+        .blur {
+          filter: blur(2px);
+        }
+
+        &-percent {
+          position: absolute;
+          display: flex;
+          justify-content: center;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          font-size: 90px;
+        }
+      }
+
+      @keyframes fadeInOut {
+        0% {
+          opacity: 0;
+          transform: translateY(5px);
+        }
+        10% {
+          opacity: 1;
+          transform: translateY(0);
+        }
+        100% {
+          opacity: 0;
+          transform: translateY(-5px);
+        }
+      }
+
+      .vote-name {
+        display: inline-block;
+        animation: fadeInOut 3s ease-in-out infinite;
+      }
     }
   }
 }
