--- a/client/src/components/molecules/Header/index.module.scss
+++ b/client/src/components/molecules/Header/index.module.scss
@@ -1,7 +1,7 @@
 #header {
   width: 100%;
   height: 40px;
-  position: fixed;
+  position: sticky;
   top: 0px;
   padding: 10px 0;
   display: flex;
