--- a/client/src/assets/styles/globals.scss
+++ b/client/src/assets/styles/globals.scss
@@ -6,7 +6,7 @@ body {
   font-family: 'Pretendard', sans-serif;
   color: var(--color-black);
   display: flex;
-  justify-content: center;
+  flex-direction: column;
 }
 
 input,
