style: input width 계산식 추가

--- a/client/src/components/atoms/Input/index.module.scss
+++ b/client/src/components/atoms/Input/index.module.scss
@@ -1,57 +1,52 @@
 .input {
-    width: 100%;
-    padding: 0px 14px;
-    border: 1px solid var(--border-gray);
-    border-radius: 8px;
-    font-size: 14px;
-    height: 40px;
-    
-    &:focus {
-      outline: none;
-      border-color: var(--color-main-orange);
-    }
-  
-    &--error {
-      border-color: var(--color-error);
-    }
-  
-    &--search {
-      
-    }
+  width: calc(100% - 30px);
+  padding: 0px 14px;
+  border: 1px solid var(--border-gray);
+  border-radius: 8px;
+  font-size: 14px;
+  height: 40px;
 
-    &--warning{
-      border-color: var(--color-error);
-    }
+  &:focus {
+    outline: none;
+    border-color: var(--color-main-orange);
+  }
 
-    &--filled--true {
-      &--light {
-        background-color: var(--color-bg-orange);
-        border-color: rgba(0,0,0,0);
-        &:focus {
-          outline: none;
-          border-color: rgba(0,0,0,0);
-        }
+  &--error {
+    border-color: var(--color-error);
+  }
+
+  &--search {
+  }
+
+  &--warning {
+    border-color: var(--color-error);
+  }
+
+  &--filled--true {
+    &--light {
+      background-color: var(--color-bg-orange);
+      border-color: rgba(0, 0, 0, 0);
+      &:focus {
+        outline: none;
+        border-color: rgba(0, 0, 0, 0);
       }
-
-      &--dark {
-        background-color: #555;
-        border: none;
-        color: #ffffff;
-    
-        &::placeholder {
-          color: #eee;
-        }
-      }
-    
     }
 
-    &--disabled--true {
-      background-color: var(--disabled-gray);
-      border-color: var(--border-gray);
-      color: var(--border-gray);
-      cursor: not-allowed;
+    &--dark {
+      background-color: #555;
+      border: none;
+      color: #ffffff;
+
+      &::placeholder {
+        color: #eee;
+      }
     }
   }
 
-
-
+  &--disabled--true {
+    background-color: var(--disabled-gray);
+    border-color: var(--border-gray);
+    color: var(--border-gray);
+    cursor: not-allowed;
+  }
+}
