--- a/client/src/components/atoms/BaseButton/index.module.scss
+++ b/client/src/components/atoms/BaseButton/index.module.scss
@@ -1,4 +1,5 @@
 .btn {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -34,7 +35,6 @@
       background-color: var(--color-gray-background);
       color: var(--color-gray-light);
     }
-
   }
 
   &-mini-chip {
@@ -47,9 +47,8 @@
     background-color: #fff;
 
     &.btn-status-fill {
-      background-color: rgba(255,255,255,0.5);
+      background-color: rgba(255, 255, 255, 0.5);
       color: #fff;
     }
   }
-
 }
