--- a/client/src/components/templates/VoteTemplate/index.module.scss
+++ b/client/src/components/templates/VoteTemplate/index.module.scss
@@ -1,30 +1,63 @@
 .vote {
-    display: flex;
-    flex-direction: column;
-    padding-top: 50px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    gap: 30px;
+  display: flex;
+  flex-direction: column;
+  padding: 50px 10px 10px 10px; /* 위, 오른쪽, 아래, 왼쪽 */
+  gap: 30px;
 }
 
 .gallery {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
-.btn { 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
-.canceled {
-    min-width: 178px;
-}
-
+.canceled,
 .one {
-    min-width: 178px;
+  min-width: 178px;
 }
+
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.selectedCandidates {
+  display: flex;
+  padding: 10px;
+  gap: 20px;
+  border: 1px solid #000;
+  border-radius: 10px;
+}
+
+.candidate {
+  display: flex;
+}
+
+.candidate > img {
+  max-height: 213px;
+}
+
+.confirm {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.modalBackdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+}
+
