--- a/client/src/components/organisms/ChatBoard/index.module.scss
+++ b/client/src/components/organisms/ChatBoard/index.module.scss
@@ -1,14 +1,24 @@
 .chatBoard {
   border-radius: 16px;
-  padding: 20px;
   width: 100%;
   max-width: 600px;
+  height: 300px;
   display: flex;
   flex-direction: column;
-  gap: 16px;
-  
+  gap: 8px;
+  justify-content: space-between;
+
+  .chatWrapper {
+    display: flex;
+    flex-direction: column;
+
+    .messageArea{
+      flex: 1;
+    }
+  }
+
   &.dark {
-    background: rgba(0, 0, 0, 0.5);
+    // background: rgba(0, 0, 0, 0.5);
     color: #fff;
     .time {
       color : #fff;
@@ -57,7 +67,8 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  max-height: 400px;
+  height: 200px;
+  max-height: 200px;
   overflow-y: auto;
   padding: 10px 0;
   
@@ -76,6 +87,19 @@
   gap: 8px;
   font-size: 14px;
   line-height: 1.5;
+
+  &.systemMessage{
+    justify-content: center;
+    
+    .time{
+      display: none;
+    }
+
+    .username {
+      display: none;
+    }
+
+  }
 }
 
 .username {
