--- a/client/src/components/templates/ElectionDetailTemplate/index.module.scss
+++ b/client/src/components/templates/ElectionDetailTemplate/index.module.scss
@@ -3,13 +3,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 30px;
 
   .info {
     &-container {
       width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
     }
 
     &-top {
+      width: 100%;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -26,6 +32,83 @@
         &-status[data-visible='false'] {
           display: none;
         }
+      }
+    }
+
+    &-bottom {
+      width: 100%;
+      border: 1px solid var(--color-gray-light);
+      border-radius: 10px;
+    }
+
+    &-wrapper {
+      padding: 10px 20px;
+    }
+  }
+
+  .qr {
+    &-container {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+    }
+
+    &-section {
+      &-text-part {
+        width: 100%;
+        display: flex;
+        align-items: center;
+      }
+
+      &-btn-part {
+        width: 100%;
+        border: 1px solid var(--color-gray-light);
+        border-radius: 10px;
+      }
+
+      &-wrapper {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px 20px;
+
+        .blur {
+          filter: blur(4px);
+        }
+
+        .btn-qr-extend {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+    }
+
+    &-modal {
+      top: -60px;
+      margin: 0 auto;
+      width: -webkit-fill-available;
+      height: calc(100% + 60px);
+      border: 0;
+      justify-content: center;
+      align-items: center;
+      background-color: rgba(0, 0, 0, 0.6);
+      z-index: 100;
+
+      &-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+      }
+
+      img {
+        max-width: 400px;
+        object-fit: cover;
       }
     }
   }
