S12P11B102-184 feat: 후보자 등록 모달 레이아웃 구성
api 연결 미완완

--- a/client/src/components/atoms/Input/index.module.scss
+++ b/client/src/components/atoms/Input/index.module.scss
@@ -1,5 +1,5 @@
 .input {
-  width: calc(100% - 30px);
+  width: -webkit-fill-available;
   padding: 0px 14px;
   border: 1px solid var(--border-gray);
   border-radius: 8px;
@@ -13,9 +13,6 @@
 
   &--error {
     border-color: var(--color-error);
-  }
-
-  &--search {
   }
 
   &--warning {
