--- a/client/src/components/templates/ElectionDetailTemplate/index.module.scss
+++ b/client/src/components/templates/ElectionDetailTemplate/index.module.scss
@@ -91,7 +91,7 @@
     &-modal {
       top: -60px;
       margin: 0 auto;
-      width: -webkit-fill-available;
+      width: auto;
       height: calc(100% + 60px);
       border: 0;
       justify-content: center;
