feat : Interceptor 추가, 인증 전 선거세션 입장시 질문 화면으로 리다이렉트

--- a/server/src/main/resources/templates/index.html
+++ b/server/src/main/resources/templates/index.html
@@ -5,6 +5,6 @@
   <title>검색 폼</title>
 </head>
 <body>
-<a th:href="/api/election/1">1번 선거 화면 입장</a>
+<a th:href="@{/api/election/1}">1번 선거 화면 입장</a>
 </body>
 </html>
