--- a/server/src/main/resources/templates/login.html
+++ b/server/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
   <title>Kakao Login</title>
 </head>
 <body>
-<a href="/oauth2/authorization/kakao"> 카카오 로그인
-</a>
+<a href="/oauth2/authorization/kakao"> 카카오 로그인</a>
+<a th:href="@{/api/election/1}">1번 선거 화면 입장</a>
 </body>
 </html>
