--- a/client/src/components/atoms/Poster/index.module.scss
+++ b/client/src/components/atoms/Poster/index.module.scss
@@ -1,4 +1,6 @@
 .poster {
+  overflow: hidden;
+
   &.poster-size {
     &-xs {
       width: auto;
@@ -18,9 +20,9 @@
     }
     &-full {
       width: 100%;
-      // height: 500px;
     }
   }
+
 }
 
 
