--- a/client/src/components/atoms/TextArea/index.module.scss
+++ b/client/src/components/atoms/TextArea/index.module.scss
@@ -8,10 +8,13 @@
     // min-height: calc(1.5em * 8); 
     line-height: 1.5;
     padding: 0.75rem 1rem;
-    font-size: 13px;
+    font-size: 14px;
     border: 1px solid var(--border-gray);
     border-radius: 10px;
 
+    &::placeholder {
+      color: var(--color-gray-light);
+    }
     
     &:focus {
       outline: none;
