--- a/client/src/components/organisms/ChatBoard/index.module.scss
+++ b/client/src/components/organisms/ChatBoard/index.module.scss
@@ -3,15 +3,16 @@
   border-radius: 16px;
   width: 100%;
   max-width: 600px;
-  height: 300px;
+  // height: 300px;
   display: flex;
   flex-direction: column;
   gap: 8px;
-  justify-content: space-between;
+  // justify-content: space-between;
 
   .chatWrapper {
     display: flex;
     flex-direction: column;
+    min-height: 200px;
 
     .messageArea{
       flex: 1;
@@ -19,7 +20,6 @@
   }
 
   &.dark {
-    // background: rgba(0, 0, 0, 0.5);
     color: #fff;
     .time {
       color : #fff;
@@ -32,8 +32,6 @@
   }
 
   &.light {
-    background-color: #fff;
-    border: 1px solid #ddd;
     color: #333;
     .time {
       color : #333;
