--- a/client/src/components/organisms/TabContainer/index.module.scss
+++ b/client/src/components/organisms/TabContainer/index.module.scss
@@ -1,13 +1,44 @@
 .container {
-  padding-top: 20px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  padding-top: 10px;
   min-width: 500px;
   width: 100%;
-  height: 350px;
+  height: 370px;
   display: flex;
   flex-direction: column;
-  background-color: rgba(0,0,0,0.5);
-  border-radius: 10px 10px 0 0;
   gap: 4px;
+  background-color: rgba(0,0,0,0.7);
+  border-radius: 20px 20px 0 0;
+  transition: transform 0.3s ease-in-out; 
+
+  &.slideDown {
+    transform: translateY(330px);
+    .slideButton {
+      > img{
+        transform: rotate(90deg);
+      }
+    }
+  }
+}
+
+.slideButton {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  border: none;
+  background: transparent;
+  > img{
+    transform: rotate(-90deg);
+  }
+  cursor: pointer;
+  
+  // 포커스 아웃라인 스타일
+  &:focus {
+    outline: none;
+    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
+  }
 }
 
 .tabNavigator {
@@ -208,3 +239,4 @@
   }
 
 }
+
