S12P11B102-166 feat: 선거 정보 api 요청 성공
무한 스크롤 데이터 요청 테스트 예정

추후 모달 디자인 변경

--- a/client/src/components/molecules/CandidateTag/index.module.scss
+++ b/client/src/components/molecules/CandidateTag/index.module.scss
@@ -1,5 +1,4 @@
 .tag {
-
   &-all {
     background-color: white;
     display: flex;
@@ -53,5 +52,9 @@
       background-color: var(--color-main-orange);
       border-color: var(--color-main-orange);
     }
+  }
+
+  &-select-true {
+    border: 1px solid var(--color-main-orange);
   }
 }
