--- a/client/src/pages/Election/Manage/index.module.scss
+++ b/client/src/pages/Election/Manage/index.module.scss
@@ -1,4 +1,7 @@
-.detail-page {
-  width: auto;
-  padding: 10px;
+.detail {
+  &-page {
+    position: relative;
+    width: auto;
+    padding: 10px;
+  }
 }
