--- a/client/src/components/templates/CandidateRegisterTemplate/index.module.scss
+++ b/client/src/components/templates/CandidateRegisterTemplate/index.module.scss
@@ -1,13 +1,28 @@
 .modal {
   &-register {
+    position: absolute;
+    top: calc(50% - 60px);
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0 auto;
     width: 100%;
+    height: calc(100% + 120px);
+    padding: 10px;
+    border: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 100;
   }
 
   &-wrapper {
-    padding: 10px;
+    position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
+    background-color: var(--color-white);
+    padding: 20px;
+    gap: 20px;
   }
 }
