--- a/client/src/components/templates/ElectionDetailTemplate/index.module.scss
+++ b/client/src/components/templates/ElectionDetailTemplate/index.module.scss
@@ -106,7 +106,7 @@
       z-index: 100;
 
       &-wrapper {
-        position: absolute;
+        position: fixed;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -119,4 +119,10 @@
       }
     }
   }
+}
+
+.register-modal-background {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
 }
