--- a/client/src/components/templates/CandidateRegisterTemplate/index.module.scss
+++ b/client/src/components/templates/CandidateRegisterTemplate/index.module.scss
@@ -1,11 +1,12 @@
 .modal {
   &-register {
-    position: absolute;
+    position: fixed;
     top: calc(50% - 60px);
     left: 50%;
     transform: translate(-50%, -50%);
     margin: 0 auto;
     width: 100%;
+    max-width: 500px;
     height: calc(100% + 120px);
     padding: 10px;
     border: 0;
@@ -18,6 +19,10 @@
 
   &-wrapper {
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -40%);
+    width: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
