style: border -> outline 변경경

--- a/client/src/components/molecules/CandidateTag/index.module.scss
+++ b/client/src/components/molecules/CandidateTag/index.module.scss
@@ -55,6 +55,6 @@
   }
 
   &-select-true {
-    border: 1px solid var(--color-main-orange);
+    outline: 1px solid var(--color-main-orange);
   }
 }
