S12P11B102-180 feat: 후보자 그룹에 후보자 추가 삭제 기능 구현
이후 후보 그룹 추가 기능 및 POST 요청 추가 예정

--- a/client/src/components/molecules/CandidateTag/index.module.scss
+++ b/client/src/components/molecules/CandidateTag/index.module.scss
@@ -26,12 +26,15 @@
   }
 
   &-list {
+    width: 100%;
+    overflow: auto;
     display: flex;
     justify-content: start;
     gap: 2px;
   }
 
   &-name {
+    width: max-content;
     display: flex;
     justify-content: center;
     align-items: center;
