style: 레이아웃 스타일링 조정
Poster 스타일 이상한거 수정
유저 리스트 최대 크기 조정정

--- a/client/src/components/molecules/CandidateSection/index.module.scss
+++ b/client/src/components/molecules/CandidateSection/index.module.scss
@@ -22,7 +22,8 @@
   }
 
   &-poster {
-    justify-content: center;
+    display: flex;
+    justify-content: flex-start;
     align-items: center;
   }
 
