S12P11B102-184 feat: 투표별 후보자 지정 및 삭제 기능 구현
선거별 투표 id값 증가로 유니크하게 관리

zustand를 활용해 전역으로 상태 관리리

--- a/client/src/components/templates/CandidateRegisterTemplate/index.module.scss
+++ b/client/src/components/templates/CandidateRegisterTemplate/index.module.scss
@@ -31,3 +31,13 @@
     gap: 20px;
   }
 }
+
+.btn {
+  &-section {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+  }
+}
