chore : 페이지 이미지 previeew 반영

--- a/client/src/assets/styles/globals.scss
+++ b/client/src/assets/styles/globals.scss
@@ -2,6 +2,11 @@
 @use 'reset';
 @use 'fonts';
 
+#root {
+  background-color: #fff;
+  height: 100vh;
+}
+
 body {
   font-family: 'Pretendard', sans-serif;
   color: var(--color-black);
