S12P11B102-187 feat: 디바운싱을 활용한 검색 기능 추가
검색 결과도 무한 스크롤을 활용해 데이터 요청청

--- a/client/src/components/organisms/VoteReginster/index.module.scss
+++ b/client/src/components/organisms/VoteReginster/index.module.scss
@@ -25,21 +25,25 @@
         gap: 10px;
       }
 
-      .candidate-register {
+      .candidate-register-section {
+        width: 100%;
+      }
+
+      .candidate-register-add {
         width: 100%;
         display: flex;
         justify-content: center;
         align-items: end;
         gap: 5px;
-      }
 
-      .register {
-        &-input {
-          width: 60%;
-        }
+        .register {
+          &-input {
+            width: 60%;
+          }
 
-        &-btn {
-          width: 40%;
+          &-btn {
+            width: 40%;
+          }
         }
       }
 
