--- a/client/src/components/organisms/WaitResult/index.module.scss
+++ b/client/src/components/organisms/WaitResult/index.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
+  min-height: 444px;
 }
 
 .voteinfo { 
@@ -17,6 +18,12 @@
   justify-content: center;
   align-items: center;
   gap: 30px;
+  min-width: 133px;
+}
+
+.select > span {
+  min-width: 57px;
+  justify-content: center;
 }
 
 .right {
