--- a/client/src/components/templates/VoteTemplate/index.module.scss
+++ b/client/src/components/templates/VoteTemplate/index.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
+  height: 100vh;
 }
 
 .gallery {
@@ -17,6 +18,10 @@
   gap: 10px;
 }
 
+.btn > button {
+  max-width: 166px;
+}
+
 .canceled,
 .one {
   min-width: 178px;
@@ -30,10 +35,14 @@ main {
 
 .selectedCandidates {
   display: flex;
-  padding: 10px;
+  justify-content: center;
+  padding: 10px 10px;
   gap: 20px;
   border: 1px solid #000;
   border-radius: 10px;
+  min-width: 342px;
+  min-height: 213px;
+  margin: 0 10px;
 }
 
 .candidate {
@@ -57,7 +66,7 @@ main {
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 9999;
+  z-index: 1000;
 }
 
 .loading {
@@ -73,4 +82,13 @@ main {
   flex-direction: column;
   align-items: center;
   gap: 10px;
+}
+
+.container {
+  display: flex;
+  height: 100%;
+}
+
+dialog {
+  padding: 20px 0px
 }
