--- a/client/src/assets/styles/globals.scss
+++ b/client/src/assets/styles/globals.scss
@@ -2,6 +2,12 @@
 @use 'reset';
 @use 'fonts';
 
+#root {
+  background-color: #fff;
+  height: 100vh;
+  overflow-y: scroll;
+}
+
 body {
   font-family: 'Pretendard', sans-serif;
   color: var(--color-black);
@@ -23,8 +29,6 @@ button {
 * {
   -ms-overflow-style: none; /* IE, Edge */
   scrollbar-width: none; /* Firefox */
-
-  
 }
 
 *,
