--- a/client/src/components/organisms/QuestionSection/index.module.scss
+++ b/client/src/components/organisms/QuestionSection/index.module.scss
@@ -1,10 +1,13 @@
 .question-container {
+  width: 100%;
   background-color: rgba($color: #ffffff, $alpha: 0.8);
   border-radius: 10px;
   padding: 20px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 20px;
+  box-shadow: 0 4px 20px rgba($color: #ffffff, $alpha: 0.1);
 
   .img-section {
     display: flex;
@@ -22,16 +25,36 @@
       gap: 10px;
     }
 
+    &-wrapper {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: var(--color-white);
+      border: 1px solid #eeeeee;
+      border-radius: 10px;
+      gap: 10px;
+      padding: 20px;
+    }
+
     &-question {
       width: 100%;
+      display: flex;
+      justify-content: center;
     }
 
     &-answer {
       width: 100%;
+
+      &-error {
+        width: 100%;
+        padding: 1px 0 0 5px;
+      }
     }
   }
 
   .btn-seciton {
+    width: 100%;
     display: flex;
     justify-content: center;
     gap: 5px;
