--- a/client/src/components/templates/FinalTemplate/index.module.scss
+++ b/client/src/components/templates/FinalTemplate/index.module.scss
@@ -5,16 +5,9 @@
   align-items: center;
   padding-top: 50px;
   padding-bottom: 20px;
+  gap: 60px;
 }
 
-.content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 40px;
-  height: 100vh;
-}
 
 .voteInfo {
   display: flex;
@@ -32,14 +25,26 @@
 
 .crown {
   position: relative;
-  top: 55px;
+  bottom: -30px;
 }
 
 .result {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
-    margin-bottom: -30px;
-    gap: 10px;
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
 }
