--- a/client/src/assets/styles/globals.scss
+++ b/client/src/assets/styles/globals.scss
@@ -2,12 +2,6 @@
 @use 'reset';
 @use 'fonts';
 
-#root {
-  background-color: #fff;
-  height: 100vh;
-  overflow-y: scroll;
-}
-
 body {
   font-family: 'Pretendard', sans-serif;
   color: var(--color-black);
@@ -15,6 +9,18 @@ body {
   flex-direction: column;
   align-items: center;
   background-color: oldlace;
+}
+
+#root {
+  background-color: #fff;
+  height: 100vh;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
 }
 
 input,
