--- a/client/src/components/organisms/ChatBoard/index.module.scss
+++ b/client/src/components/organisms/ChatBoard/index.module.scss
@@ -3,11 +3,10 @@
   border-radius: 16px;
   width: 100%;
   max-width: 600px;
-  // height: 300px;
   display: flex;
   flex-direction: column;
-  gap: 8px;
-  // justify-content: space-between;
+  justify-content: space-between;
+  gap: 8px; 
 
   .chatWrapper {
     display: flex;
