--- a/client/src/components/templates/LoginTemplate/index.module.scss
+++ b/client/src/components/templates/LoginTemplate/index.module.scss
@@ -1,10 +1,11 @@
 .container {
   position: relative;
-}
-.logo {
-  position: absolute;
-  top: 300px;
-  left: 80px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 300px;
 }
 
 .intro {
@@ -16,5 +17,5 @@
 }
 
 .a {
-    margin-top: 30px;
+  margin-top: 30px;
 }
