--- a/client/src/components/organisms/ChatBoard/index.module.scss
+++ b/client/src/components/organisms/ChatBoard/index.module.scss
@@ -113,10 +113,13 @@
 // Heart
 // ==================
 
-.heartContainer {
+.heartBox {
   position: absolute;
-  right: 0px;
+  right: 0;
   top: -50px;
+}
+
+.heartContainer {
   display: inline-block;
 }
 
