--- a/client/src/components/atoms/StreamSender/index.module.scss
+++ b/client/src/components/atoms/StreamSender/index.module.scss
@@ -13,5 +13,8 @@
     border: 1px solid #333;
     padding: 14px;
     border-radius: 10px;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
   }
 }
