--- a/client/src/components/organisms/TabContainer/index.module.scss
+++ b/client/src/components/organisms/TabContainer/index.module.scss
@@ -6,7 +6,8 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
-  background-color: rgba(0,0,0,0.7);
+  background-color: #333;
+  // background-color: rgba(0,0,0,0.7);
   // border-radius: 20px 20px 0 0;
   transition: transform 0.3s ease-in-out; 
 
