--- a/client/src/pages/Streaming/index.module.scss
+++ b/client/src/pages/Streaming/index.module.scss
@@ -4,14 +4,31 @@
   flex:1;
   display: flex;
   flex-direction: column;
+  background-color: #333;
+  :global(.global-container) {
+    flex: 1;
+  }
   // background: url(/src/assets/sample/streaming-sample.png) no-repeat center center ;
   // background-size: cover;
   // overflow: hidden;
 
-  .tab__content {
-    position: absolute;
-    bottom: 0;
-    flex: 1;
-  }
+
+  // .tab__content {
+  //   position: absolute;
+  //   bottom: 0;
+  //   flex: 1;
+  // }
   
 }
+
+// :global {
+//     .tab
+// }
+
+
+// global {
+//   .container {
+//     flex: 1;
+
+//   }
+// }
