--- a/client/src/components/templates/ElectionDetailTemplate/index.module.scss
+++ b/client/src/components/templates/ElectionDetailTemplate/index.module.scss
@@ -1,5 +1,4 @@
 .detail-container {
-  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -91,7 +90,7 @@
     }
 
     &-modal {
-      position: absolute;
+      position: fixed;
       top: calc(50% - 60px);
       left: 50%;
       transform: translate(-50%, -50%);
@@ -103,6 +102,7 @@
       justify-content: center;
       align-items: center;
       background-color: rgba(0, 0, 0, 0.6);
+      border-radius: 0px;
       z-index: 100;
 
       &-wrapper {
