feat : Streaming 페이지 구현

--- a/client/src/components/molecules/ChatBar/index.module.scss
+++ b/client/src/components/molecules/ChatBar/index.module.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 8px;
-  padding: 10px 0;
+  // padding: 10px 0;
 
   .sendButton {
     display: flex;
