--- a/client/src/components/atoms/StreamSender/index.module.scss
+++ b/client/src/components/atoms/StreamSender/index.module.scss
@@ -1,6 +1,8 @@
 .container {
-  background-color: #eee;
-
+  video {
+    background-color: #ccc;
+    // border-radius: 0 0 16px 16px;
+  }
   .title {
     text-indent: -9999px;
     height: 0;
@@ -9,29 +11,56 @@
 
   .buttons {
     display: flex;
-    gap: 10px;
-  }
-  .buttons > div{
-    display: flex;
     align-items: center;
     justify-content: center;
-    border: none;
-    border-radius: 10px;
-    width: 50px;
-    height: 50px;
-    border-radius: 25px;
-    
-    
-    &.startButton {
-      background-color: rgba(51, 51, 51, 0.5);
-    }
+    gap: 30px;
+    padding-bottom: 14px;  
+    padding-top: 14px;
+    // border-radius: 0 0 10px 10px;
 
-    &.stopButton {
-      background-color: rgba(254, 63, 120, 0.565);
-    }
+    > div{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: none;
+      border-radius: 10px;
+      width: 44px;
+      height: 44px;
+      border-radius: 25px;
+      cursor: pointer;
+      
+      &.startButton {
+        &:disabled{
+          &::before{
+            width: 2;
+            height: 10;
+            background-color: #fff;
+          }
+          position: relative;
+          background-color: rgba(255,255,255,1);
+        }
+        background-color: rgba(255,255,255,0.5);
+      }
+  
+      &.stopButton {
+        &:disabled{
+          &:disabled::before{
 
-    &.microphone {
-      background-color: #333;
+          }
+          background-color: rgba(254, 63, 120, 0.4);
+        }
+        background-color: rgba(254, 63, 120, 0.8);
+      }
+  
+      &.microphone {
+        &:disabled{
+          &:disabled::before{
+            
+          }
+          background-color: rgba(255,255,255,0.1)
+        }
+        background-color:rgba(255,255,255,0.5)
+      }
     }
   }
 }
