--- a/client/src/components/organisms/ResultChatContainer/index.module.scss
+++ b/client/src/components/organisms/ResultChatContainer/index.module.scss
@@ -1,6 +1,13 @@
+:global {
+  #main-container.show-header {
+    height: calc(100% - 60px);
+  }
+}
+
 .container {
-  flex: 1;
-  padding: 10px 10px 0;
+  // flex: 1;
+  padding: 10px;
+  height: 100%;
   max-width: 500px;
   width: 100%;
   display: flex;
@@ -11,6 +18,7 @@
   transition: transform 0.3s ease-in-out;
   box-shadow: 0 -10px 30px rgba(0, 0, 0, 0.08);
   border: 1px solid #eee;
+  overflow-y: auto;
 
   &.slideDown {
     transform: translateY(330px);
@@ -21,18 +29,18 @@
     }
   }
 
-  > div {
-    height: 100%;
-    > div {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      height: inherit;
-      div:nth-child(1) {
-        height: inherit;
-      }
-    }
-  }
+  // > div {
+  //   height: 100%;
+  //   > div {
+  //     display: flex;
+  //     flex-direction: column;
+  //     // justify-content: space-between;
+  //     height: inherit;
+  //     div:nth-child(1) {
+  //       height: inherit;
+  //     }
+  //   }
+  // }
 }
 
 .slideButton {
