--- a/client/src/components/organisms/TabContainer/index.module.scss
+++ b/client/src/components/organisms/TabContainer/index.module.scss
@@ -1,11 +1,12 @@
 .container {
-  padding-top: 10px;
+  border: 1px solid #777;
+  padding-top: 20px;
   min-width: 500px;
   width: 100%;
   // height: 370px;
   display: flex;
   flex-direction: column;
-  gap: 4px;
+  // gap: 4px;
   background-color: #333;
   // background-color: rgba(0,0,0,0.7);
   // border-radius: 20px 20px 0 0;
@@ -42,7 +43,7 @@
 .tabNavigator {
   display: flex;
   justify-content: space-between;
-  padding: 10px 16px 0;
+  padding: 0 16px;
   
   .tabMenu {
     display: flex;
@@ -67,9 +68,9 @@
 
 .tabContent {
   flex: 1;
-  height: calc(350px - 100px);
-  padding: 0 16px 16px 16px;
-  margin-top: 16px;
+  height: calc(100% - 100px);
+  padding: 10px 16px 16px 16px;
+  // margin-top: 16px;
 
     // ChatBoard를 위한 특별 스타일
     > div {
