--- a/client/src/components/templates/ResultCurrentTemplate/index.module.scss
+++ b/client/src/components/templates/ResultCurrentTemplate/index.module.scss
@@ -1,9 +1,9 @@
 .result__container {
-  padding: 20px 0;
+  padding-top: 20px;
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 50px;
-  height: 100vh;
+  gap: 20px;
+  height: 100%;
 }
