--- a/client/src/components/organisms/TabContainer/index.module.scss
+++ b/client/src/components/organisms/TabContainer/index.module.scss
@@ -69,7 +69,7 @@
 .tabContent {
   flex: 1;
   height: calc(100% - 100px);
-  padding: 10px 16px 16px 16px;
+  padding: 16px;
   // margin-top: 16px;
 
     // ChatBoard를 위한 특별 스타일
