style: 선거 리스트 패딩 적용

--- a/client/src/components/templates/ElectionListTemplate/index.module.scss
+++ b/client/src/components/templates/ElectionListTemplate/index.module.scss
@@ -1,6 +1,7 @@
 .list {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    margin-top: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin-top: 8px;
+  padding: 10px;
 }
