--- a/client/src/components/molecules/ElectionListBox/index.module.scss
+++ b/client/src/components/molecules/ElectionListBox/index.module.scss
@@ -17,7 +17,7 @@
 }
 
 .title {
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 18px;
   font-weight: 600;
   margin: 0;
@@ -25,8 +25,8 @@
 
 .content {
   padding: 10px;
-  background: #FFFFFF;
-  border-radius: 16px;
+  background: #ffffff;
+  border-radius: 0 16px 16px 16px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   overflow: hidden;
 }
@@ -40,11 +40,10 @@
 
 .emptyText {
   flex: 1;
-  color: #9CA3AF;
+  color: #9ca3af;
   font-size: 16px;
   text-align: center;
   padding: 50px 0;
-
 }
 
 .createButton {
