--- a/client/src/components/molecules/CandidateSection/index.module.scss
+++ b/client/src/components/molecules/CandidateSection/index.module.scss
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 10px;
     padding: 10px 16px;
   }
 
@@ -35,6 +36,9 @@
     &-prefix {
       width: 50%;
       white-space: pre-line;
+      display: flex;
+      justify-content: end;
+      align-items: end;
       margin-right: 5px;
     }
   }
