S12P11B102-362 style: vh -> dvh, dynamic 으로 변경

--- a/client/src/assets/styles/globals.scss
+++ b/client/src/assets/styles/globals.scss
@@ -21,7 +21,7 @@ body {
 
 #root {
   background-color: #fff;
-  height: 100vh;
+  height: 100dvh;
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
