fix : 투표결과 채팅 UI 수정, 채팅메세지 100자 제한 및 오류 수정

--- a/client/src/components/molecules/ElectionListItem/index.module.scss
+++ b/client/src/components/molecules/ElectionListItem/index.module.scss
@@ -19,8 +19,8 @@
 
 .leftContent {
   min-width: 0;
-  max-width: 250px;
-  width: inherit;
+  max-width: 100%;
+  // width: inherit;
   display: flex;
   flex: 1;
   flex-direction: column;
