--- a/client/src/components/templates/FinalTemplate/index.module.scss
+++ b/client/src/components/templates/FinalTemplate/index.module.scss
@@ -13,8 +13,9 @@
 }
 
 .main {
-  max-height: 800px;
-  bottom: 290px;
+  // max-height: 800px;
+  // bottom: 290px;
+  width: 100%;
   z-index: 1;
   margin-top: 60px;
 }
