--- a/client/src/assets/styles/reset.scss
+++ b/client/src/assets/styles/reset.scss
@@ -125,3 +125,8 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+em, b, strong, i {
+  text-decoration: none;
+  font-style: normal;
+}
