--- a/client/src/components/organisms/ChatBoard/index.module.scss
+++ b/client/src/components/organisms/ChatBoard/index.module.scss
@@ -23,6 +23,7 @@
 
   &.light {
     color: #333;
+    height: calc(100% - 38px);
     .time {
       color : #333;
     }
@@ -56,8 +57,11 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  height: calc(100% - 40px);
+  height: calc(100% - 50px);
   overflow-y: auto; // 세로 스크롤 활성화
+
+  line-height: 1.5;
+  word-break: break-word;
   
   &::-webkit-scrollbar {
     width: 6px;
@@ -70,23 +74,34 @@
 }
 
 .messageRow {
-  display: flex;
-  gap: 8px;
+  // display: flex;
+  // gap: 8px;
   font-size: 14px;
-  line-height: 1.5;
 
-  &.systemMessage{
-    justify-content: center;
-    
-    .time{
-      display: none;
-    }
-
-    .username {
-      display: none;
-    }
-
+  > span {
+    display: inline;
+    margin-right: 4px;
   }
+
+  .content {
+    white-space: pre-wrap;
+  }
+  // &.systemMessage{
+  //   justify-content: center;
+    
+  //   .time{
+  //     display: none;
+  //   }
+
+  //   .username {
+  //     display: none;
+  //   }
+
+  // }
+}
+
+.time {
+  max-width: 10%;
 }
 
 .username {
@@ -95,6 +110,7 @@
 
 .content {
   word-break: break-all;
+  max-width: 70%;
 }
 
 
@@ -130,8 +146,9 @@
   top: -42px;
 
   &.sessionCnt {
-    top: 0px;
+    top: -42px;
     color: #333;
+    border: none;
   }
 
   span{
