--- a/client/src/components/organisms/FinalResult/index.module.scss
+++ b/client/src/components/organisms/FinalResult/index.module.scss
@@ -2,8 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 362px;
-    min-height: 372px;
+    // max-width: 362px;
+    // min-height: 372px;
+    width: 76%;
     padding: 50px 20px 30px 20px;
     gap: 20px;
     background-color: white;
