--- a/client/src/components/organisms/ResultChatContainer/index.module.scss
+++ b/client/src/components/organisms/ResultChatContainer/index.module.scss
@@ -6,23 +6,25 @@
 
 
 .container {
-  // flex: 1;
-  padding: 20px 16px 16px 20px;
-  height: 100%;
+  padding: 10px 16px 16px 20px;
   max-width: 500px;
   width: 100%;
+  height: 50%;
   display: flex;
   flex-direction: column;
   gap: 14px;
-  background-color: #fff;
+  background-color: rgba(255,255,255,0.9);
   border-radius: 20px 20px 0 0;
   transition: transform 0.3s ease-in-out;
   box-shadow: 0 -10px 30px rgba(0, 0, 0, 0.08);
   border: 1px solid #eee;
-  overflow-y: auto;
+  // overflow-y: auto;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 
   &.slideDown {
-    transform: translateY(330px);
+    transform: translateY(calc(100% - 43px));
     .slideButton {
       > img {
         transform: rotate(90deg);
@@ -30,18 +32,6 @@
     }
   }
 
-  // > div {
-  //   height: 100%;
-  //   > div {
-  //     display: flex;
-  //     flex-direction: column;
-  //     // justify-content: space-between;
-  //     height: inherit;
-  //     div:nth-child(1) {
-  //       height: inherit;
-  //     }
-  //   }
-  // }
 }
 
 .slideButton {
